# circleci_bringup

./: README.md  test.bat  test.sh
CommandLine/: CMakeLists.txt  CommandLine.c  CommandLine.cpp  CommandLine.h  CommandLine.hpp  CommandLine_t.cpp  README.md
ConvertToC/: CMakeLists.txt  ConvertToC.cpp  README.md
Log/: CMakeLists.txt  Jamfile.jam  Log.c  Log.h  LogTarget.hpp  LogTarget_t.cpp  Log_t.cpp  PrintfLogTarget.hpp  README.md  StdStreamLogTarget.hpp
SprungValue/: CMakeLists.txt  SprungValue.h  SprungValue_t.cpp
